--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,23 @@ body {
     place-items: center;
 }
 
+.btn {
+    height: 40px;
+    display: grid;
+    place-items: center;
+    padding-inline: 24px;
+    border-radius: var(--shape-corner-full);
+    background-color: var(--primary);
+    color: var(--on-primary);
+    font-weight: var(--weight-medium);
+    overflow: hidden;
+    --state-layer-bg: var(--on-primary);
+}
+
+.btn:hover:not(:focus) {
+    box-shadow: var(--elevation-1);
+}
+
 .topbar {
     background-color: var(--background);
     position: fixed;
@@ -570,6 +587,8 @@ body {
     background-color: var(--surface-container-low);
     border-radius: var(--shape-corner-medium);
     padding: 12px;
+    display: grid;
+    gap: 16px;
     --state-layer-bg: var(--on-surface);
 }
 
@@ -630,4 +649,201 @@ body {
 
 .resume-bottom-item .icon {
     height: 28px;
+}
+
+
+/* INPUT STYLES -----------> */
+
+.input-field,
+.textarea {
+    color: var(--on-surface);
+    padding: 13px 16px;
+    box-shadow: inset 0 0 0 1px var(--outline);
+    border-radius: var(--shape-corner-extra-small);
+    outline: none;
+    transition: all 300ms linear;
+}
+
+.textarea {
+    height: 120px;
+    padding: 16px;
+}
+
+:where(.input-field,
+.textarea)::placeholder {
+    color: var(--on-surface-variant);
+}
+
+:where(.input-field,
+.textarea):focus {
+    box-shadow: inset 0 0 0 2px var(--primary);
+}
+
+
+/* CONTACT -----------> */
+
+.contact-tab {
+    padding-block: 0;
+}
+
+.contact-tab .container {
+    padding-block-end: 24px;
+}
+
+.contact-info,
+.contact-info-list {
+    display: grid;
+    gap: 12px;
+}
+
+.contact-info {
+    padding-top: 1rem;
+    margin-block-end: 24px;
+}
+
+.contact-info-list {
+    margin-block-end: 12px;
+    border-block-end: 1px solid var(--outline-variant);
+    padding-bottom: 16px;
+}
+
+.contact-info-item {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.contact-info .icon-box {
+    width: 48px;
+    height: 48px;
+    flex-shrink: 0;
+    display: grid;
+    place-items: center;
+    color: var(--on-surface-variant);
+}
+
+.info-content {
+    display: grid;
+    gap: 4px;
+}
+
+.info-title {
+    color: var(--on-surface-variant);
+    opacity: 0.6;
+}
+
+.info-text {
+    color: var(--on-surface-variant);
+}
+
+.social-list {
+    display: flex;
+    gap: 12px;
+}
+
+.social-item {
+    padding: 12px;
+}
+
+.social-item-icon {
+    font-size: 2.5rem;
+}
+
+.input-wrapper {
+    margin-block-start: 16px;
+    display: grid;
+    gap: 10px;
+}
+
+.contact-form {
+    background-color: var(--surface-container);
+    padding: 16px;
+    margin-block-end: 16px;
+    border-radius: var(--shape-corner-medium);
+}
+
+
+/* FOOTER -------> */
+
+.footer .container {
+    text-align: center;
+    padding: 16px;
+    border-block-start: 1px solid var(--outline-variant);
+}
+
+
+/* RESPOSIVE DESING */
+
+
+/* TABLET 768PX */
+
+@media screen and (min-width: 768px) {
+    .article {
+        position: relative;
+        display: grid;
+        grid-template-columns: 0.5fr 1fr;
+        align-items: flex-start;
+    }
+    .about-card,
+    .primary-tabs {
+        position: sticky;
+        top: 64px;
+    }
+    .primary-tabs {
+        z-index: 2;
+    }
+    /* hero  */
+    .hero .container {
+        grid-template-columns: 0.2fr 1fr;
+    }
+    .contact-tab {
+        margin-top: 2rem;
+    }
+}
+
+
+/* TABLET 1200PX */
+
+@media screen and (min-width: 1200px) {
+    .container,
+    .article {
+        max-width: 1128px;
+        margin-inline: auto;
+    }
+    /* BOUT CARD */
+    .about-card {
+        margin-inline: 8px;
+    }
+    .contact-tab .container {
+        display: grid;
+        align-items: flex-start;
+        grid-template-columns: 0.6fr 1fr;
+        gap: 24px;
+    }
+}
+
+
+/* SESTILOS PERSONALIZADOS */
+
+.active-work {
+    display: inline-block;
+    margin-bottom: 1rem;
+    border: 1px solid var(--on-primary);
+    background-color: var(--primary);
+    color: var(--on-primary);
+    padding: .5rem .8rem;
+    border-radius: var(--shape-corner-full);
+}
+
+.hero-content .active-work {
+    color: var(--on-primary);
+}
+
+.text-importante {
+    color: var(--primary);
+    font-weight: 600;
+}
+
+.habilidades-icon {
+    margin-top: 2rem;
 }
